Fixed: wflow-consoleweb - Universal Theme - Remove min-width of form column which causing field can display correctly in very small screen size. @6.0-SNAPSHOT Fixed: wflow-consoleweb - UI - Popup is too narrow in mobile. @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/universal/css/form.css
+++ b/wflow-consoleweb/src/main/webapp/universal/css/form.css
@@ -465,6 +465,7 @@ body .form-column, body .subform-column {
     max-width: 99%;
     margin: 0.5%;
     color: inherit;
+    min-width: inherit;
 }
 
 body .form-cell, body .subform-cell {
